# kompas-qt

./: CMakeLists.txt  Doxyfile  PKGBUILD  README.md  doxygen.sh
debian/: control  copyright  kompas-qt.install
doc/: Architecture.dox  ArchitectureLegend.dox  MainPage.dox  RoadMap.dox  namespaces.dox
doc/examples/: AbstractPluginMenuView.dox
graphics/: CMakeLists.txt  data.qrc
l10n/: CMakeLists.txt  cs_CZ.ts  update.sh
modules/: CMakeLists.txt  FindKompasQt.cmake  FindMap2XQt.cmake
package/: CMakeLists.txt  Kompas.desktop
package/archlinux/kompas-qt/: .gitignore  PKGBUILD
package/archlinux/kompas-qt-git/: PKGBUILD
package/debian/: changelog  kompas-qt-dev.install
package/debian-obs/: debian.kompas-qt-dev.install  debian.kompas-qt.install  kompas-qt.dsc
package/rpm/: kompas-qt.spec
src/: AboutDialog.cpp  AboutDialog.h  AbstractConfigurationDialog.cpp  AbstractConfigurationDialog.h  AbstractConfigurationWidget.h  AbstractMapView.cpp  AbstractMapView.h  AbstractPluginManager.h  AbstractPluginMenuView.cpp  AbstractPluginMenuView.h  AbstractTool.h  AbstractToolDialog.h  AbstractUIComponent.h  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationWidget.cpp  ConfigurationWidget.h  LatLonCoordsEdit.cpp  LatLonCoordsEdit.h  Locker.h  MainWindow.cpp  MainWindow.h  MainWindowConfigure.h.cmake  MapOptionsDock.cpp  MapOptionsDock.h  MessageBox.cpp  MessageBox.h  MovingWidget.cpp  MovingWidget.h  OpenRasterMenuView.cpp  OpenRasterMenuView.h  PluginDialog.cpp  PluginDialog.h  PluginDialogTab.cpp  PluginDialogTab.h  PluginManager.h  PluginManagerStore.cpp  PluginManagerStore.h  PluginModel.cpp  (+34 more)
src/Plugins/: CMakeLists.txt  GraphicsMapView.cpp  GraphicsMapView.h  MapView.cpp  MapView.h  Tile.cpp  Tile.h  registerStatic.cpp  registerStaticDesktop.cpp  registerStaticMobile.cpp
src/Plugins/DistanceMeterTool/: CMakeLists.txt  CurrentCelestialBodyPluginModel.cpp  CurrentCelestialBodyPluginModel.h  DistanceMeterTool.conf  DistanceMeterTool.cpp  DistanceMeterTool.h  DistanceMeterToolDialog.cpp  DistanceMeterToolDialog.h
src/Plugins/DmsDecimalTool/: CMakeLists.txt  DmsDecimalTool.conf  DmsDecimalTool.cpp  DmsDecimalTool.h  DmsDecimalToolDialog.cpp  DmsDecimalToolDialog.h
src/Plugins/GraphicsMapView/: CMakeLists.txt  GraphicsMapView.conf  GraphicsMapView.cpp  GraphicsMapView.h  MapView.cpp  MapView.h  Tile.cpp  Tile.h
src/Plugins/UIComponents/: CMakeLists.txt
src/Plugins/UIComponents/About/: AboutDialog.cpp  AboutDialog.h  AboutUIComponent.conf  AboutUIComponent.cpp  AboutUIComponent.h  CMakeLists.txt
src/Plugins/UIComponents/Configuration/: CMakeLists.txt  CacheTab.cpp  CacheTab.h  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationUIComponent.conf  ConfigurationUIComponent.cpp  ConfigurationUIComponent.h  ConfigurationWidget.cpp  ConfigurationWidget.h  MainTab.cpp  MainTab.h
src/Plugins/UIComponents/Desktop/: CMakeLists.txt  DesktopUIComponent.cpp  DesktopUIComponent.h
src/Plugins/UIComponents/DistanceMeter/: CMakeLists.txt  CurrentCelestialBodyPluginModel.cpp  CurrentCelestialBodyPluginModel.h  DistanceMeterDialog.cpp  DistanceMeterDialog.h  DistanceMeterUIComponent.conf  DistanceMeterUIComponent.cpp  DistanceMeterUIComponent.h
src/Plugins/UIComponents/DmsDecimalConverter/: CMakeLists.txt  DmsDecimalConverterDialog.cpp  DmsDecimalConverterDialog.h  DmsDecimalConverterUIComponent.conf  DmsDecimalConverterUIComponent.cpp  DmsDecimalConverterUIComponent.h
src/Plugins/UIComponents/MapOptions/: CMakeLists.txt  EditableRasterOverlayModel.cpp  EditableRasterOverlayModel.h  EditableRasterPackageModel.cpp  EditableRasterPackageModel.h  MapOptionsDock.cpp  MapOptionsDock.h  MapOptionsUIComponent.conf  MapOptionsUIComponent.cpp  MapOptionsUIComponent.h  MovingWidget.cpp  MovingWidget.h  ZoomSlider.cpp  ZoomSlider.h
src/Plugins/UIComponents/MenuBar/: CMakeLists.txt  MenuBarUIComponent.conf  MenuBarUIComponent.cpp  MenuBarUIComponent.h
src/Plugins/UIComponents/Mobile/: CMakeLists.txt  MobileCentralWidget.cpp  MobileCentralWidget.h  MobileUIComponent.conf  MobileUIComponent.cpp  MobileUIComponent.h
src/Plugins/UIComponents/OpenRaster/: CMakeLists.txt  OpenRasterMenuView.cpp  OpenRasterMenuView.h  OpenRasterUIComponent.conf  OpenRasterUIComponent.cpp  OpenRasterUIComponent.h
src/Plugins/UIComponents/PluginConfiguration/: CMakeLists.txt  PluginConfigurationUIComponent.conf  PluginConfigurationUIComponent.cpp  PluginConfigurationUIComponent.h  PluginDialog.cpp  PluginDialog.h  PluginTab.cpp  PluginTab.h
src/Plugins/UIComponents/SaveRaster/: AreaPage.cpp  AreaPage.h  CMakeLists.txt  ContentsPage.cpp  ContentsPage.h  DownloadPage.cpp  DownloadPage.h  MetadataPage.cpp  MetadataPage.h  SaveRasterMenuView.cpp  SaveRasterMenuView.h  SaveRasterThread.cpp  SaveRasterThread.h  SaveRasterUIComponent.conf  SaveRasterUIComponent.cpp  SaveRasterUIComponent.h  SaveRasterWizard.cpp  SaveRasterWizard.h  StatisticsPage.cpp  StatisticsPage.h
src/Plugins/UIComponents/SessionManagement/: CMakeLists.txt  SessionManagementUIComponent.conf  SessionManagementUIComponent.cpp  SessionManagementUIComponent.h  SessionManagerDialog.cpp  SessionManagerDialog.h  SessionMenuView.cpp  SessionMenuView.h  SessionModel.cpp  SessionModel.h
src/Plugins/UIComponents/StatusBar/: CMakeLists.txt  StatusBarUIComponent.conf  StatusBarUIComponent.cpp  StatusBarUIComponent.h
src/data/: data.qrc  win-icon.rc
